# stock-trading-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
configs/: base.yaml
configs/costs/: conservative.yaml
configs/experiments/: advanced_stack_validation.yaml  breakout_swing_entry_sensitivity.yaml
configs/market/: crypto.yaml  kr_stock.yaml  us_stock.yaml
configs/modes/: backtest.yaml  live.yaml
configs/risk/: conservative_risk_v1.yaml
configs/strategy/: breakout_swing_v1.yaml
data/logs/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
data/results/: .gitkeep
docs/: 01_requirements_specification.md  02_basic_design_specification.md  03_detailed_design_specification.md  04_development_strategy.md
notebooks/: .gitkeep
scripts/: .gitkeep
src/stock_trading_bot/: __init__.py
src/stock_trading_bot/adapters/: __init__.py
src/stock_trading_bot/ai/: __init__.py  advanced_ranking_model.py  basic_ranking_model.py  candidate_ranker.py  core_feature_set_builder.py  feature_builder.py
src/stock_trading_bot/app/: __init__.py  run_backtest.py  run_parameter_experiments.py
src/stock_trading_bot/core/: __init__.py
src/stock_trading_bot/execution/: __init__.py
src/stock_trading_bot/infrastructure/: __init__.py  _serialization.py
tests/fixtures/: .gitkeep
tests/integration/: .gitkeep  test_ai_scoring_integration.py  test_backtest_artifacts.py  test_backtest_e2e.py  test_parameter_experiments.py  test_step20_advanced_extensions.py
tests/simulation/: .gitkeep
tests/unit/: .gitkeep
(+96 files in other folders)
